syntax = "proto3";

package product_service;
option go_package = "genproto/product_service";

message Product {
  string id = 1;
  string name = 2;
  string description = 3;
  string category = 4;
  string made_in = 6;
  string color = 7;
  int64 count = 5;
  float cost = 8;
  float discount = 9;
  int64 age_min = 10;
  int64 age_max = 11;
  int64 temperature_min = 12;
  int64 temperature_max = 13;
  string for_gender = 14;
  int64 size = 15;
  string created_at = 16;
  string updated_at = 17;
}

message Filter {
    string name = 1;
    string description = 2;
    string category = 3;
    string made_in = 4;
    string color = 5;
    int64 count = 6;
    int64 cost = 7;
    int64 discount = 8;
    int64 age_min = 9;
    int64 age_max = 10;
    int64 temperature_min = 11;
    int64 temperature_max = 12;
    string for_gender = 13;
    int64 page = 14;
    int64 limit = 15;
}

message Recom {
    string gender = 1;
    int64 age = 2;
}
  
message Order {
    string id = 1;
    string product_id = 2;
    string user_id = 3;
    string status = 4;
    string created_at = 5;
    string updated_at = 6;
}

message Like {
    string id = 1;
    string product_id = 2;
    string user_id = 3;
    string created_at = 5;
    string updated_at = 6;
}

message Save {
    string id = 1;
    string product_id = 2;
    string user_id = 3;
    string created_at = 4;
    string updated_at = 5;
}

message Star {
    string id = 1;
    string product_id = 2;
    string user_id = 3;
    int64 star = 4;
    string created_at = 5;
    string updated_at = 6;
}

message Comment {
    string id = 1;
    string product_id = 2;
    string user_id = 3;
    string comment = 4;
    string created_at = 5;
    string updated_at = 6;
}

message ListRequest {
    int64 page = 1;
    int64 limit = 2;
}

message GetWithID {
    string id = 1;
}

message GetWithUserID {
    string user_id = 1;
}

message DeleteResponse {
    bool status = 1;
}

message MoveResponse {
    bool status = 1;
}

message ListProductResponse {
    repeated Product products = 1;
}

message ListOrderResponse {
    repeated Order orders = 1;
}

message ListSavedResponse {
    repeated Save saved_products = 1;
}

message ListWishlistResponse {
    repeated Like likes = 1;
}

message ListCommentResponse {
    repeated Comment comments = 1;
}

message ListStarsResponse {
    repeated Star stars = 1;
}
